Sculpting in LookDev mode - not updating mesh until one click #62717

Closed
opened 2019-03-18 18:51:45 +01:00 by Facundo · 6 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35
system-info.txt

Short description of error
When sculpting in Solid mode, and the you change to LookDev mode, the scultped mesh does not update until you make one click with the mouse.

Exact steps for others to reproduce the error

  • Open Blender.
  • Select any object to sculpt on.
  • Go to Sculpting tab
  • Start sculpting in Solid mode
  • Change to LookDev mode. The mesh is not updated (the original mesh is shown). If you then make one click it updates it.

Captura.PNG

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 [system-info.txt](https://archive.blender.org/developer/F6845399/system-info.txt) **Short description of error** When sculpting in Solid mode, and the you change to LookDev mode, the scultped mesh does not update until you make one click with the mouse. **Exact steps for others to reproduce the error** - Open Blender. - Select any object to sculpt on. - Go to Sculpting tab - Start sculpting in Solid mode - Change to LookDev mode. The mesh is not updated (the original mesh is shown). If you then make one click it updates it. ![Captura.PNG](https://archive.blender.org/developer/F6845415/Captura.PNG)
Author

Added subscriber: @Facu

Added subscriber: @Facu

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Clément Foucault was assigned by William Reynish 2019-03-18 19:32:18 +01:00

Confirmed. There's a missing update when switching viewport shading modes.

Confirmed. There's a missing update when switching viewport shading modes.
Clément Foucault was unassigned by Jeroen Bakker 2019-03-22 14:29:23 +01:00
Jeroen Bakker self-assigned this 2019-03-22 14:29:23 +01:00
Member

Added subscriber: @fclem

Added subscriber: @fclem

This issue was referenced by 1be2888bf0

This issue was referenced by 1be2888bf0210e510ca65a7b86e5350ea85ab9f1
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62717
No description provided.